Bug 33848 - UI – Zoom slider should not hide when Slides sidebar is in use
Summary: UI – Zoom slider should not hide when Slides sidebar is in use
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:4.2.0
Keywords: difficultyInteresting, easyHack, skillCpp
: 38698 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-02-02 11:09 UTC by gleppert
Modified: 2016-02-18 16:37 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
ScreenShot-Sometimes-Zoom-Slider-Disappears (360.88 KB, image/png)
2011-02-02 11:09 UTC, gleppert
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gleppert 2011-02-02 11:09:01 UTC
Created attachment 42863 [details]
ScreenShot-Sometimes-Zoom-Slider-Disappears

Im am quite extensively using Impress these days and encounter several times in a day following bug:

The ZoomSlider sometimes simply dissapears. Please see attached screen shot. 

Unfortunately, I could not find an ideal way to reproduce the bug. I know that it only happens when I often switch between "Normal" mode and "Note" (Notiz) mode. 
I never encountered this problem when I was only using "Normal" mode on one day.

In order to get the ZoomSlider back to work, sometimes it is enough to switch back to "Note" view and again back to "Normal" view. Sometimes, a restart of Impress is necessary, though.
Comment 1 gleppert 2011-02-02 12:23:35 UTC
Additional remarks:
My system is: Ubuntu 4.10 (32 Bit) and LibreOffice 3.3
Comment 2 vitriol 2011-02-02 12:49:14 UTC
I think that zoom slider is visible only if the focus is on the main document area. For example it disappears if you select a slide thumbnail in the sidebar.
Comment 3 gleppert 2011-02-21 04:01:55 UTC
Since I could not reproduce the bug since I reported it, I set the status to resolved invalid. I will reopen the bug when I can reproduce it. 

@vitriol: I am aware that the zoom slider is only visible if the focus is in the main area. However, the problem was that it was in the edit mode in the main area.
Comment 4 Rainer Bielefeld Retired 2011-06-27 09:48:49 UTC
*** Bug 38698 has been marked as a duplicate of this bug. ***
Comment 5 Rainer Bielefeld Retired 2011-06-27 11:15:28 UTC
Behavior is at least a bit unexpected, may be an Enhancement to keep slider visible would be appropriate?
Comment 6 Rainer Bielefeld Retired 2011-06-28 01:31:05 UTC
[Reproducible] with "LibreOffice 3.4.1RC1 - WIN7  Home Premium (64bit) German UI [OOO340m1 (Build:103)]"

vitriol's observation is correct, and I believe it's a bug. While Zoom Slider is invisible zoom can be modified with menu 'View > Zoom', so why should it not also be possible with slider?
Comment 7 Rainer Bielefeld Retired 2011-06-28 01:31:26 UTC
@Thorsten:
Please feel free to reassign if it’s not your area!
Comment 8 Rainer Bielefeld Retired 2011-06-28 02:07:12 UTC
Jeffrey added a Comment 6 in Bug 38698 what matches with my suspects.
Comment 9 Stefan Knorr 2011-06-28 10:07:25 UTC
My own comment from dupe #38698:
"I can sort of understand that the zoom slider isn't
available in the Slide Sorter view (the slide sorter could however also show
slides at different zoom levels), but it definitely should be available when
using the Slides sidebar -- to zoom the slides in the main window (the similar
look of sorter and sidebar makes me think the code is the same [1]).

The rest of the bug are UI problems:

* the Zoom slider takes a little time to vanish after [clicking somewhere on the sidebar — so LibO is not responsive enough here]

* the two bars to the left and right sides are still there making the status
bar look broken

* when using the context menu of the sidebar, the Zoom slider only vanishes
after selecting an element of the menu (it should vanish immediately after
right-clicking the area."
Comment 10 bfoman (inactive) 2013-05-16 12:50:57 UTC
This bug has not been touched by its owner for a long time. To make it clearer which bugs should be fixed by someone else please take following action:
- If you are the owner, and you are actively working on the bug, please give it an update. 
- If you are the owner, and you do not plan to work on it in the near future,
please reassign it to the default assignee and change its status to NEW.
Comment 11 gleppert 2013-05-16 13:17:40 UTC
Hi Bfoman, is the owner the reporter or the person to whom the bug is assigned (= Thorsten in this case)? Thanks.
Comment 12 bfoman (inactive) 2013-05-16 14:19:56 UTC
I was thinking about current assignee.
Comment 13 Thorsten Behrens (allotropia) 2013-06-05 15:06:50 UTC
Hmm. Played a bit with that today, but run out of time again -

anyway, here are some code pointers, turning this into an easy hack:

This is behaviour is because the zoom slider is connected to the SID_ATTR_ZOOMSLIDER item, which is disabled for the slide sorter view. If you stick a breakpoint into SvxZoomSliderControl::StateChanged() in svx/source/stbctrls/zoomsliderctrl.cxx, you notice getting disabled when clicking into the slide sorter window, and enabled back again when focusing the main view.
Comment 14 Björn Michaelsen 2013-10-04 18:48:08 UTC
adding LibreOffice developer list as CC to unresolved EasyHacks for better visibility.

see e.g. http://nabble.documentfoundation.org/minutes-of-ESC-call-td4076214.html for details
Comment 15 Samuel Mehrbrodt 2013-10-05 11:50:23 UTC
Submitted a patch: https://gerrit.libreoffice.org/6141
Comment 16 Samuel Mehrbrodt 2013-10-29 13:09:41 UTC
Fixed. You might test a daily build to verify it (should be a build from tomorrow): http://dev-builds.libreoffice.org/daily/master/Win-x86@42/current/
Comment 17 Commit Notification 2013-10-29 13:12:37 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=637033d67c11582abaef43b1d16d3ba4e5653a0d

fdo#33848 Show zoom Slider when the focus is on the Slides Sidebar



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Stefan Knorr 2013-11-10 20:09:19 UTC
Thanks, Samuel! Works as expected (recent 4.2 master build of mine/Linux).
Comment 19 Robinson Tryon (qubit) 2015-12-16 00:21:53 UTC
Migrating Whiteboard tags to Keywords: (EasyHack DifficultyInteresting SkillCpp)
[NinjaEdit]
Comment 20 Robinson Tryon (qubit) 2016-02-18 16:37:31 UTC
Remove LibreOffice Dev List from CC on EasyHacks
(curtailing excessive email to list)
[NinjaEdit]