fdo#33848 Show zoom Slider when the focus is on the Slides Sidebar

Inspired by this patch from Ariel Constenla-Haile:https://issues.apache.org/ooo/attachment.cgi?id=80653&action=diff

Change-Id: I8e482d9829eeb81a1f7cc89a4de781ae768f3333
Reviewed-on: https://gerrit.libreoffice.org/6141
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>